# focus-mode-exe

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  app-shell.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: display.rs  lib.rs  main.rs  steam.rs
