[package]
name = "focus-mode-claude"
version = "0.1.0"
description = "Focus Mode - Automatic monitor manager for gaming"
authors = ["Gabriel Mase <github.com/gabriel-mase>"]
edition = "2021"

[lib]
name = "focus_mode_claude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "windef", "fileapi", "errhandlingapi"] }
winreg = "0.52"

